[package]
name = "omd"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = "0.9.1"
tempfile = "3.5.0"
clap = { version = "4.4.0", features = ["derive"] }
base64 = "0.22.1"
tokio = { version = "1.28.1", features = ["full"] }
warp = "0.3.3"
async-stream = "0.3.4"
notify = "6.1.1"
futures = "0.3.30"
futures-util = "0.3.30"
tokio-stream = "0.1.16"
local-ip-address = "0.4"
